--- a/index.html
+++ b/index.html
@@ -238,6 +238,12 @@
       border-radius: 10px;
       /* box-shadow:0 3px 6px #999, 0 3px 6px #999; */
     }
+
+    .drop-down-sizes {
+      margin-left: 82px;
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
   </style>
 </head>
 
@@ -612,18 +618,17 @@
     <p>Maddie In Good Company Merchandise</p>
     <br>
     <div class="row">
-      <div class="col-sm-2"></div>
-      <div class="col-sm-4 text-center">
+      <div class="col-sm-4 col-sm-offset-2 col-12 text-center">
         <img src="assets/images/maddieingoodcoshirt.jpg" class="tshirt" width="255" height="305">
         <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="429FRYFLW9BLC">
           <table class="center">
+            <!-- <tr>
+              <td><input class="drop-down-sizes" type="hidden" name="on0" value="Sizes">Sizes</td>
+            </tr> -->
             <tr>
-              <td><input type="hidden" name="on0" value="Sizes">Sizes</td>
-            </tr>
-            <tr>
-              <td><select name="os0">
+              <td><select class="drop-down-sizes" name="os0">
                   <option value="Small">Small - $25.00 USD</option>
                   <option value="Medium">Medium - $25.00 USD</option>
                   <option value="Large">Large - $25.00 USD</option>
@@ -636,17 +641,17 @@
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
       </div>
-      <div class="col-sm-4 text-center">
+      <div class="col-sm-4 col-12 text-center">
         <img src="assets/images/blacktshirt.PNG" class="tshirt" width="255" height="305">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="5HHC86WA674QW">
           <table class="center">
+            <!-- <tr>
+              <td><input class="drop-down-sizes" type="hidden" name="on0" value="Sizes">Sizes</td>
+            </tr> -->
             <tr>
-              <td><input type="hidden" name="on0" value="Sizes">Sizes</td>
-            </tr>
-            <tr class="text-center">
-              <td><select name="os0">
+              <td><select class="drop-down-sizes" name="os0">
                   <option value="Small">Small - $30.00 USD</option>
                   <option value="Medium">Medium - $30.00 USD</option>
                   <option value="Large">Large - $30.00 USD</option>
