styling for tahnk you page

--- a/thankyou.html
+++ b/thankyou.html
@@ -229,6 +229,17 @@
             border-radius: 50%;
         }
 
+        .go-back-button {
+            padding: 10px 25px;
+            color: black;
+            background-color: white;
+            border-radius: 5px;
+        }
+
+        .go-back-div {
+            margin-top: 20px;
+        }
+
         /* #store{
   background-color:white;
   color:black;
@@ -300,8 +311,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-md-offset-5">
-                    <a href="https://www.maddieingoodcompany.com/">GO BACK</a>
+                <div class="col-md-12 text-center go-back-div">
+                    <a class="go-back-button" href="https://www.maddieingoodcompany.com/">RETURN TO SITE</a>
                 </div>
             </div>
         </div>
