--- a/index.html
+++ b/index.html
@@ -646,10 +646,7 @@
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="5HHC86WA674QW">
-          <table class="center">
-            <!-- <tr>
-              <td><input class="drop-down-sizes" type="hidden" name="on0" value="Sizes">Sizes</td>
-            </tr> -->
+          <table>
             <tr>
               <td><select class="drop-down-sizes" name="os0">
                   <option value="Small">Small - $30.00 USD</option>
@@ -668,6 +665,9 @@
       </div>
     </div>
   </div>
+
+
+
   <!-- <div class="col-sm-4">
         <p class="text-center"><strong>Hand Made Pins</strong></p><br>
         <a href="#demo" data-toggle="collapse">
