spacing on button

--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
       border-radius: 50%;
     }
 
+    .bottom-button {
+      margin-bottom: 40px;
+    }
+
     /* #store{
   background-color:white;
   color:black;
@@ -636,8 +640,8 @@
             </tr>
           </table>
           <input type="hidden" name="currency_code" value="USD">
-          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit"
-            alt="PayPal - The safer, easier way to pay online!">
+          <input class="bottom-button" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif"
+            border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
       </div>
@@ -658,8 +662,8 @@
             </tr>
           </table>
           <input type="hidden" name="currency_code" value="USD">
-          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit"
-            alt="PayPal - The safer, easier way to pay online!">
+          <input class="bottom-button" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif"
+            border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
       </div>
