--- a/thankyou.html
+++ b/thankyou.html
@@ -240,6 +240,18 @@
             margin-top: 20px;
         }
 
+        @media only screen and (max-width:768px) {
+            .thank-you-text {
+                margin-top: 10px;
+            }
+
+            .thank-you-image {
+                width: 100%;
+
+            }
+        }
+
+
         /* #store{
   background-color:white;
   color:black;
@@ -278,10 +290,10 @@
                         src="assets/images/twitterlogo5.png" alt="twitter icon"></a>
                 <!-- <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50"> -- -->
 
-            </div>
-            <div class="nav navbar-nav navbar-center bg-1">
                 <h6 style="padding-left:20px;">Maddie in Good Company</h6>
+
             </div>
+
             <div class="collapse navbar-collapse" id="myNavbar">
                 <!-- <ul class="nav navbar-nav navbar-right">
                     <li><a href="#myPage">HOME</a></li>
@@ -301,13 +313,13 @@
     <!-- Container (Contact Section) -->
     <div id="contact" class="bg-1">
         <div class="container">
-            <h3 class="text-center">THANK YOU FOR YOUR PURCHASE!</h3>
+            <h3 class="text-center thank-you-text">THANK YOU FOR YOUR PURCHASE!</h3>
             <!-- <p class="text-center"><em>We love our fans!</em></p> -->
 
             <div class="row">
                 <div class="col-md-12 text-center">
                     <!-- <p>Fan? Drop a note.</p> -->
-                    <img src="assets/images/thankyou.jpeg" alt="thank you">
+                    <img class="thank-you-image" src="assets/images/thankyou.jpeg" alt="thank you">
                 </div>
             </div>
             <div class="row">
