--- a/thankyou.html
+++ b/thankyou.html
@@ -249,6 +249,12 @@
                 width: 100%;
 
             }
+
+            #contact {
+                margin-top: 80px;
+                padding-bottom: 100px;
+                padding-top: 10px;
+            }
         }
 
 
@@ -275,11 +281,11 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+                </button> -->
                 <a class="social-media" href="https://gcriste.github.io/Maddie-in-Good-Company/"><img
                         class="img-fluid social" src="assets/images/MGC logo.jpg" alt="logo" width="50" height="50"></a>
                 <a class="social-media" href="https://www.instagram.com/maddieingoodcompany/"> <img
