--- a/thankyou.html
+++ b/thankyou.html
@@ -240,22 +240,34 @@
             margin-top: 20px;
         }
 
+        @media only screen and (max-width:768px) {
+            .thank-you-text {
+                margin-top: 10px;
+            }
 
-        .thank-you-text {
-            margin-top: 10px;
+            .thank-you-image {
+                width: 100%;
+
+            }
+
+            #contact {
+                margin-top: 80px;
+                padding-bottom: 100px;
+                padding-top: 10px;
+            }
         }
 
-        .thank-you-image {
-            width: 100%;
+        @media only screen and (min-width:769px) {
+            .thank-you-text {
+                margin-top: 10px;
+            }
 
+            #contact {
+                margin-top: 80px;
+                padding-bottom: 100px;
+                padding-top: 10px;
+            }
         }
-
-        #contact {
-            margin-top: 80px;
-            padding-bottom: 100px;
-            padding-top: 10px;
-        }
-
 
 
         /* #store{
