--- a/thankyou.html
+++ b/thankyou.html
@@ -251,22 +251,21 @@
             }
 
             #contact {
-                margin-top: 70px;
+                margin-top: 80px;
                 padding-bottom: 100px;
-                padding-top: 10px;
+                /* padding-top: 10px; */
             }
         }
 
         @media only screen and (min-width:769px) {
             .thank-you-text {
                 margin-top: 10px;
+
+                margin-bottom: 10px;
+                z-index: 11;
             }
 
-            #contact {
-                margin-top: 70px;
-                padding-bottom: 100px;
-                padding-top: 10px;
-            }
+
         }
 
 
@@ -291,6 +290,7 @@
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
     <nav class="navbar navbar-default navbar-fixed-top">
+        <!-- <h6 class="text-center">Maddie in Good Company</h6> -->
         <div class="container-fluid">
             <div class="navbar-header">
                 <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -298,6 +298,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button> -->
+
                 <a class="social-media" href="https://gcriste.github.io/Maddie-in-Good-Company/"><img
                         class="img-fluid social" src="assets/images/MGC logo.jpg" alt="logo" width="50" height="50"></a>
                 <a class="social-media" href="https://www.instagram.com/maddieingoodcompany/"> <img
@@ -308,7 +309,7 @@
                         src="assets/images/twitterlogo5.png" alt="twitter icon"></a>
                 <!-- <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50"> -- -->
 
-                <h6 style="padding-left:20px;">Maddie in Good Company</h6>
+
 
             </div>
 
