--- a/thankyou.html
+++ b/thankyou.html
@@ -290,7 +290,7 @@
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
     <nav class="navbar navbar-default navbar-fixed-top">
-        <!-- <h6 class="text-center">Maddie in Good Company</h6> -->
+        <h6 class="text-center">Maddie in Good Company</h6>
         <div class="container-fluid">
             <div class="navbar-header">
                 <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
