--- a/thankyou.html
+++ b/thankyou.html
@@ -255,6 +255,10 @@
                 padding-bottom: 100px;
                 /* padding-top: 10px; */
             }
+
+            .navbar-head {
+                margin-top: -4px;
+            }
         }
 
         @media only screen and (min-width:769px) {
@@ -264,10 +268,11 @@
                 margin-bottom: 10px;
                 z-index: 11;
             }
-
-
         }
 
+        #contact {
+            padding-top: 20px;
+        }
 
         /* #store{
   background-color:white;
@@ -292,13 +297,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <h6 class="text-center">Maddie in Good Company</h6>
         <div class="container-fluid">
-            <div class="navbar-header">
-                <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button> -->
-
+            <div class="navbar-head">
                 <a class="social-media" href="https://gcriste.github.io/Maddie-in-Good-Company/"><img
                         class="img-fluid social" src="assets/images/MGC logo.jpg" alt="logo" width="50" height="50"></a>
                 <a class="social-media" href="https://www.instagram.com/maddieingoodcompany/"> <img
@@ -309,19 +308,6 @@
                         src="assets/images/twitterlogo5.png" alt="twitter icon"></a>
                 <!-- <img src = "../Maddie-in-Good-Company/assets/images/maddieingoodcompanylogo.jpg" alt ="logo" width="50" height= "50"> -- -->
 
-
-
-            </div>
-
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <!-- <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#myPage">HOME</a></li>
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#tour">TOUR</a></li>
-                    <li><a href="#media">MEDIA</a></li>
-                    <li><a href="#store">STORE</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
-                </ul> -->
             </div>
         </div>
     </nav>
