--- a/index.html
+++ b/index.html
@@ -621,16 +621,13 @@
     <h3>STORE</h3>
     <p>Maddie In Good Company Merchandise</p>
     <br>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-sm-4 col-sm-offset-2 col-12 text-center">
         <img src="assets/images/maddieingoodcoshirt.jpg" class="tshirt" width="255" height="305">
         <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="429FRYFLW9BLC">
           <table class="center">
-            <!-- <tr>
-              <td><input class="drop-down-sizes" type="hidden" name="on0" value="Sizes">Sizes</td>
-            </tr> -->
             <tr>
               <td><select class="drop-down-sizes" name="os0">
                   <option value="Small">Small - $25.00 USD</option>
@@ -644,28 +641,26 @@
             border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
-      </div>
-      <div class="col-sm-4 col-12 text-center">
+      </div> -->
+      <div class="col-sm-4 col-sm-offset-4 col-12 text-center">
         <img src="assets/images/blacktshirt.PNG" class="tshirt" width="255" height="305">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="5HHC86WA674QW">
           <table>
-            <tr>
-              <td><select class="drop-down-sizes" name="os0">
-                  <option value="Small">Small - $30.00 USD</option>
-                  <option value="Medium">Medium - $30.00 USD</option>
-                  <option value="Large">Large - $30.00 USD</option>
-                  <option value="XL">XL - $30.00 USD</option>
-                  <option value="XXL">XXL - $30.00 USD</option>
-                </select> </td>
-            </tr>
+         <tr><td><select class="drop-down-sizes" name="os0">
+            <option value="Small">Small $35.00 USD</option>
+            <option value="Medium">Medium $35.00 USD</option>
+            <option value="Large">Large $35.00 USD</option>
+            <option value="XL">XL $35.00 USD</option>
+            <option value="XXL">XXL $35.00 USD</option>
+          </select> </td></tr>
           </table>
           <input type="hidden" name="currency_code" value="USD">
-          <input class="bottom-button" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif"
-            border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+          <input class="bottom-button" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
+          </form>
+          
       </div>
     </div>
   </div>
