--- a/index.html
+++ b/index.html
@@ -244,10 +244,18 @@
     }
 
     .drop-down-sizes {
-      margin-left: 82px;
+      margin-left: 22px;
       margin-bottom: 10px;
       margin-top: 10px;
     }
+
+
+    /* use this when two or more shirts */
+    /* .drop-down-sizes {
+      margin-left: 82px;
+      margin-bottom: 10px;
+      margin-top: 10px;
+    } */
   </style>
 </head>
 
@@ -648,6 +656,7 @@
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="5HHC86WA674QW">
           <table>
+            <tr><td class="text-center"><p><em>*Limited time offer and includes free shipping</em></p></td></tr>
          <tr><td><select class="drop-down-sizes" name="os0">
             <option value="Small">Small $35.00 USD</option>
             <option value="Medium">Medium $35.00 USD</option>
