--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
       </div> -->
-      <div class="col-sm-4 col-sm-offset-4 col-12 text-center">
+      <!-- <div class="col-sm-4 col-sm-offset-4 col-12 text-center">
         <img src="assets/images/blacktshirt.PNG" class="tshirt" width="255" height="305">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
@@ -670,8 +670,8 @@
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
           </form>
           
-      </div>
-    </div>
+      </div> -->
+    <!-- </div> -->
   </div>
 
 
