--- a/index.html
+++ b/index.html
@@ -256,6 +256,17 @@
       margin-bottom: 10px;
       margin-top: 10px;
     } */
+
+    /* .spotify-container{
+      width:100%;
+      height:200px;
+    } */
+
+    .spotify-column{
+      width:100% !important;
+      height:200px;
+      padding:0px;
+    }
   </style>
 </head>
 
@@ -552,6 +563,9 @@
     <div id="media">
       <!-- <div class = "container"> -->
       <h3 class="text-center">MEDIA</h3>
+      <div class='conatiner'>
+        <div class="row text-center">
+        <div class="col-md-12 col-xs-12">
       <div id="myCarouseltwo" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -602,14 +616,16 @@
         </a>
       </div>
       <!-- </div> -->
-
+      </div>
+      </div>
+    </div>
 
 
       <div class="container">
         <h3 class="text-center"> SPOTIFY SONGS</h3>
-        <div class="row text-center">
+        <div class="row spotify-container text-center">
           <div class="col-md-12 col-xs-12">
-            <iframe class="img-fluid" src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="1000"
+            <iframe class="img-fluid spotify-column" src="https://open.spotify.com/embed/artist/6kLV2oqFWrSvlFWlsw97QH" width="100%"
               height="220" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </div>
         </div>
