--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="./styles.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
+  <link href="./styles.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -56,8 +55,7 @@
   <!-- Container (The ABOUT Section) -->
   <div id="about" class="container">
       <div class="text-center">    
-          <h3>THE BAND</h3>
-        <p><em>Soul n Roll</em></p>
+          <h3>CONTACT</h3>
     </div>
 
       <div class="row">
@@ -109,9 +107,6 @@
 
     <div id="contact" class="bg-1">
         <div class="container">
-          <h3 class="text-center">CONTACT</h3>
-          <!-- <p class="text-center"><em>We love our fans!</em></p> -->
-  
           <div class="row">
             <div class="col-md-12 text-center">
               <!-- <p>Fan? Drop a note.</p> -->
@@ -122,8 +117,8 @@
           </div>
           </div>
         </div>
-  </div>
-</div>
+ 
+
 
 
 
@@ -161,7 +156,7 @@
         <span class="glyphicon glyphicon-chevron-up"></span>
       </a><br><br>
     </footer>
-
+  </div>
 
 
 
