--- a/merch.html
+++ b/merch.html
@@ -9,10 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="./styles.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
+  <link href="./styles.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -53,60 +52,55 @@
 
 
 
-  <!-- Container (The ABOUT Section) -->
-  <div id="about" class="container">
-      <div class="text-center">    
-          <h3>THE BAND</h3>
-        <p><em>Soul n Roll</em></p>
-    </div>
-
-      <div class="row">
-          <div class="col-sm-6">
-              <img width="100%" height="100%" src="./assets/updated-images/BlakePhotoshoot.JPEG">
-          </div>
-          <div class="col-sm-6">
-            <p>Maddie in Good Company was established in January 2018 at a Janis Joplin tribute show in nashville, tn at Exit In. The 3 piece clicked immediately, headed back to the house, ate pizza and jammed. High on life, the band was formed. The following weekend the band met and started writing songs. Over the last 4 years they have released 4 songs and are in the process of recording an album. The band has since expanded to be 8 members consisting of vocals, bgv, guitar, bass, drums, 2 saxophone players, and a keyboardist. The melting pot of musical background has created a new genre called “soul n roll”.  </p>
-            <p>The band’s mission is to encourage everyone to surround themselves in good company. They were lucky enough to find each other on a serendipitous night and have since become family. They want to share that feeling with others; If you don’t have it, you can get it with us. </p>
-          </div>
-      </div>
-
-
-    <!-- <br>
-    <div class="row">
-      <div class="col-sm-4">
-        <p class="text-center"><strong>Maddie</strong></p><br>
-        <a href="#demo2" data-toggle="collapse">
-          <img src="assets/images/maddie.jpg" class="img-circle person" alt="Maddie" width="255" height="255">
-        </a>
-        <div id="demo2" class="collapse">
-          <p>Singer</p>
-          <p>Favorite Food: Chicky Chicky Parm Parm</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <p class="text-center"><strong>Chris</strong></p><br>
-        <a href="#demo" data-toggle="collapse">
-          <img src="assets/images/chris.jpg" class="img-circle person" alt="Chris" width="255" height="255">
-        </a>
-        <div id="demo" class="collapse">
-          <p>Guitarist</p>
-          <p>Favorite Food: Ceviche</p>
-        </div>
-      </div>
-
-
-      <div class="col-sm-4">
-        <p class="text-center"><strong>Griffin</strong></p><br>
-        <a href="#demo3" data-toggle="collapse">
-          <img src="assets/images/griffin.jpg" class="img-circle person" alt="Griffin" width="255" height="255">
-        </a>
-        <div id="demo3" class="collapse">
-          <p>Drummer</p>
-          <p>Favorite Food: (Baltimore) Crabcakes</p>
-        </div>
-      </div>
+<!-- Container (The Store Section) -->
+<div id="store" class="container text-center">
+    <h3>STORE</h3>
+    <p>Maddie In Good Company Merchandise</p>
+    <br>
+    <!-- <div class="row">
+    <div class="col-sm-4 col-sm-offset-2 col-12 text-center">
+      <img src="assets/images/maddieingoodcoshirt.jpg" class="tshirt" width="255" height="305">
+      <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="429FRYFLW9BLC">
+        <table class="center">
+          <tr>
+            <td><select class="drop-down-sizes" name="os0">
+                <option value="Small">Small - $25.00 USD</option>
+                <option value="Medium">Medium - $25.00 USD</option>
+                <option value="Large">Large - $25.00 USD</option>
+              </select> </td>
+          </tr>
+        </table>
+        <input type="hidden" name="currency_code" value="USD">
+        <input class="bottom-button" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif"
+          border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+      </form>
     </div> -->
-
+    <!-- <div class="col-sm-4 col-sm-offset-4 col-12 text-center">
+      <img src="assets/images/blacktshirt.PNG" class="tshirt" width="255" height="305">
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="5HHC86WA674QW">
+        <table>
+          <tr><td class="text-center"><p><em>*Limited time offer and includes free shipping</em></p></td></tr>
+       <tr><td><select class="drop-down-sizes" name="os0">
+          <option value="Small">Small $35.00 USD</option>
+          <option value="Medium">Medium $35.00 USD</option>
+          <option value="Large">Large $35.00 USD</option>
+          <option value="XL">XL $35.00 USD</option>
+          <option value="XXL">XXL $35.00 USD</option>
+        </select> </td></tr>
+        </table>
+        <input type="hidden" name="currency_code" value="USD">
+        <input class="bottom-button" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
+        
+    </div> -->
+    
+    <!-- </div> -->
     <div id="contact" class="bg-1">
         <div class="container">
           <h3 class="text-center">CONTACT</h3>
@@ -123,7 +117,7 @@
           </div>
         </div>
   </div>
-</div>
+
 
 
 
@@ -161,7 +155,7 @@
         <span class="glyphicon glyphicon-chevron-up"></span>
       </a><br><br>
     </footer>
-
+  </div>
 
 
 
@@ -209,3 +203,4 @@
 </body>
 
 </html>
+
