--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </div>
       <div class="col-sm-4 download-section">
         <h2 class="margin-small">TREMBLE</h2>
-        <img src="./assets/updated-images/IdBeGone.JPEG" width="100%" height="100%">
+        <img src="./assets/updated-images/tremble.jpg" width="100%" height="100%">
         <a class="margin-small" href="https://open.spotify.com/track/18U2L6TiO64CS2uN0bglsl?si=07f48540cf934c44">
           <button class="btn btn-dark padding-button margin-small">
             <h5>DOWNLOAD/STREAM</h5>
@@ -123,7 +123,7 @@
       </div>
       <div class="col-sm-4 download-section">
         <h2 class="margin-small">TROUBLED MIND</h2>
-        <img src="./assets/updated-images/IdBeGone.JPEG" width="100%" height="100%">
+        <img src="./assets/updated-images/troubledmind.jpg" width="100%" height="100%">
         <a class="margin-small" href="https://open.spotify.com/track/2uL9SUZMIgCY3Ll9N0Oltn?si=bbc78021700148de">
           <button class="btn btn-dark padding-button margin-small">
             <h5>DOWNLOAD/STREAM</h5>
