--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link 
+  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
+  rel="stylesheet"  type='text/css'>
   <link href="./styles.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/310cf36ef2.js" crossorigin="anonymous"></script>
 
 
 </head>
@@ -88,6 +92,7 @@
         <h5 class="margin-small">
           NEW SINGLE OUT NOW
         </h5>
+        <i class="fa-brands fa-instagram"></i>
         <a class="margin-small" href="https://open.spotify.com/track/55WCXfPee6WawXDGvT0ZHK?si=b46eab78453f44fd">
           <button class="btn btn-dark padding-button">
             <h5>DOWNLOAD/STREAM</h5>
@@ -105,7 +110,7 @@
     <div class="row">
       <div class="col-sm-4 download-section">
         <h2 class="margin-small">I'D BE GONE</h2>
-        <a class="margin-small" href="https://open.spotify.com/track/0zvuZqCHxtTf5o4Uf9FoFZ?si=510fdb2213514efe"><img src="./assets/updated-images/IdBeGone.JPEG" width="100%" height="100%"></a>
+        <a class="margin-small" href="https://open.spotify.com/track/0zvuZqCHxtTf5o4Uf9FoFZ?si=510fdb2213514efe"><img class="hvr-grow" src="./assets/updated-images/IdBeGone.JPEG" width="100%" ></a>
         <a class="margin-small" href="https://open.spotify.com/track/0zvuZqCHxtTf5o4Uf9FoFZ?si=510fdb2213514efe">
           <button class="btn btn-dark padding-button margin-small">
             <h5>DOWNLOAD/STREAM</h5>
@@ -114,7 +119,7 @@
       </div>
       <div class="col-sm-4 download-section">
         <h2 class="margin-small">TREMBLE</h2>
-        <a class="margin-small" href="https://open.spotify.com/track/18U2L6TiO64CS2uN0bglsl?si=07f48540cf934c44"><img src="./assets/updated-images/tremble.jpg" width="100%" height="100%"></a>
+        <a class="margin-small" href="https://open.spotify.com/track/18U2L6TiO64CS2uN0bglsl?si=07f48540cf934c44"><img class="hvr-grow" src="./assets/updated-images/tremble.jpg" width="100%" ></a>
         <a class="margin-small" href="https://open.spotify.com/track/18U2L6TiO64CS2uN0bglsl?si=07f48540cf934c44">
           <button class="btn btn-dark padding-button margin-small">
             <h5>DOWNLOAD/STREAM</h5>
@@ -123,7 +128,7 @@
       </div>
       <div class="col-sm-4 download-section">
         <h2 class="margin-small">TROUBLED MIND</h2>
-        <a class="margin-small" href="https://open.spotify.com/track/2uL9SUZMIgCY3Ll9N0Oltn?si=bbc78021700148de"><img src="./assets/updated-images/troubledmind.jpg" width="100%" height="100%"></a>
+        <a class="margin-small" href="https://open.spotify.com/track/2uL9SUZMIgCY3Ll9N0Oltn?si=bbc78021700148de"><img class="hvr-grow" src="./assets/updated-images/troubledmind.jpg" width="100%" ></a>
         <a class="margin-small" href="https://open.spotify.com/track/2uL9SUZMIgCY3Ll9N0Oltn?si=bbc78021700148de">
           <button class="btn btn-dark padding-button margin-small">
             <h5>DOWNLOAD/STREAM</h5>
@@ -459,7 +464,7 @@
         });
       })
     </script>
-
+  
 
 
 </body>
