--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link 
-  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
-  rel="stylesheet"  type='text/css'>
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+    type='text/css'>
   <link href="./styles.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -88,16 +87,25 @@
         <img width="100%" height="100%" src="./assets/updated-images/Overlow.PNG">
       </div>
       <div class="col-sm-6 download-section">
-        <h2 class="margin-small">OVERFLOW</h2>
-        <h5 class="margin-small">
+        <h1 class="margin-small">OVERFLOW</h1>
+        <h3 class="margin-small">
           NEW SINGLE OUT NOW
-        </h5>
-        <i class="fa-brands fa-instagram"></i>
-        <a class="margin-small" href="https://open.spotify.com/track/55WCXfPee6WawXDGvT0ZHK?si=b46eab78453f44fd">
-          <button class="btn btn-dark padding-button">
-            <h5>DOWNLOAD/STREAM</h5>
-          </button>
-        </a>
+        </h3>
+        <div class="row add-pad-top">
+          <div class="col-6">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-tiktok"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+          <div class="col-6">
+            <a class="margin-small" href="https://open.spotify.com/track/55WCXfPee6WawXDGvT0ZHK?si=b46eab78453f44fd">
+              <button class="btn btn-stream padding-button">
+                <h5>DOWNLOAD/STREAM</h5>
+              </button>
+          </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -110,27 +118,30 @@
     <div class="row">
       <div class="col-sm-4 download-section">
         <h2 class="margin-small">I'D BE GONE</h2>
-        <a class="margin-small" href="https://open.spotify.com/track/0zvuZqCHxtTf5o4Uf9FoFZ?si=510fdb2213514efe"><img class="hvr-grow" src="./assets/updated-images/IdBeGone.JPEG" width="100%" ></a>
+        <a class="margin-small" href="https://open.spotify.com/track/0zvuZqCHxtTf5o4Uf9FoFZ?si=510fdb2213514efe"><img
+            class="hvr-grow" src="./assets/updated-images/IdBeGone.JPEG" width="100%"></a>
         <a class="margin-small" href="https://open.spotify.com/track/0zvuZqCHxtTf5o4Uf9FoFZ?si=510fdb2213514efe">
-          <button class="btn btn-dark padding-button margin-small">
+          <button class="btn btn-stream padding-button margin-small">
             <h5>DOWNLOAD/STREAM</h5>
           </button>
         </a>
       </div>
       <div class="col-sm-4 download-section">
         <h2 class="margin-small">TREMBLE</h2>
-        <a class="margin-small" href="https://open.spotify.com/track/18U2L6TiO64CS2uN0bglsl?si=07f48540cf934c44"><img class="hvr-grow" src="./assets/updated-images/tremble.jpg" width="100%" ></a>
+        <a class="margin-small" href="https://open.spotify.com/track/18U2L6TiO64CS2uN0bglsl?si=07f48540cf934c44"><img
+            class="hvr-grow" src="./assets/updated-images/tremble.jpg" width="100%"></a>
         <a class="margin-small" href="https://open.spotify.com/track/18U2L6TiO64CS2uN0bglsl?si=07f48540cf934c44">
-          <button class="btn btn-dark padding-button margin-small">
+          <button class="btn btn-stream padding-button margin-small">
             <h5>DOWNLOAD/STREAM</h5>
           </button>
         </a>
       </div>
       <div class="col-sm-4 download-section">
         <h2 class="margin-small">TROUBLED MIND</h2>
-        <a class="margin-small" href="https://open.spotify.com/track/2uL9SUZMIgCY3Ll9N0Oltn?si=bbc78021700148de"><img class="hvr-grow" src="./assets/updated-images/troubledmind.jpg" width="100%" ></a>
+        <a class="margin-small" href="https://open.spotify.com/track/2uL9SUZMIgCY3Ll9N0Oltn?si=bbc78021700148de"><img
+            class="hvr-grow" src="./assets/updated-images/troubledmind.jpg" width="100%"></a>
         <a class="margin-small" href="https://open.spotify.com/track/2uL9SUZMIgCY3Ll9N0Oltn?si=bbc78021700148de">
-          <button class="btn btn-dark padding-button margin-small">
+          <button class="btn btn-stream padding-button margin-small">
             <h5>DOWNLOAD/STREAM</h5>
           </button>
         </a>
@@ -153,20 +164,22 @@
     <div class="container">
       <h3 class="text-center">UPCOMING SHOWS</h3>
       <ul class="list-group">
-        <!-- <li class="list-group-item">January 5th <span class="label label-danger">Sold Out!</span></li>
-      <li class="list-group-item">October <span class="label label-danger">Sold Out!</span></li> 
-      <li class="list-group-item">November <span class="badge">3</span></li>  -->
+        <li class="list-group-item black-text">
+          <div>May 21 @ Dee's Lounge</div>
+          <a target="_blank" href="https://deeslounge.com/shows-events/"><button
+              class="btn btn-primary">Tickets</button></a>
+        </li>
+        <li class="list-group-item black-text">
+          <div>May 28 @City Winery </div><a target="_blank"
+            href="https://citywinery.com/nashville/Online/default.asp?BOparam::WScontent::loadArticle::permalink=NSH-Toast-and-Jam-5-28-22-12pm&BOparam::WScontent::loadArticle::context_id="><button
+              class="btn btn-primary">Tickets</button></a>
+        </li>
+
       </ul>
 
 
-      <div class="row text-center">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4">
-          <p>May 21 Dee's Lounge</p>
-        </div>
-      </div>
-      <br>
-      <br>
+
+
 
 
       <!-- <h3 class="text-center">PAST SHOWS</h3>
@@ -178,23 +191,23 @@
             <p><strong>@ The 5 Spot</strong></p>
             <p>January 5 2020</p>
             <p>w/ Camden West & Carter Veil</p> -->
-            <!-- <p>9:00pm</p>
+      <!-- <p>9:00pm</p>
           <p>$10</p> -->
-            <!-- <button class="btn" data-toggle="modal" data-target="#myModal">View Setlist</button> -->
-            <!-- <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button> -->
-          <!-- </div>
+      <!-- <button class="btn" data-toggle="modal" data-target="#myModal">View Setlist</button> -->
+      <!-- <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button> -->
+      <!-- </div>
         </div>
       </div> -->
     </div>
   </div>
 
 
-    <!-- Modal -->
-    <!-- <div class="modal fade" id="myModal" role="dialog">
+  <!-- Modal -->
+  <!-- <div class="modal fade" id="myModal" role="dialog">
       <div class="modal-dialog"> -->
 
-        <!-- Modal content-->
-        <!-- <div class="modal-content">
+  <!-- Modal content-->
+  <!-- <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">×</button>
             <h4><strong>View Setlist</strong></h4>
@@ -218,11 +231,11 @@
 
 
 
-    <!--OLD MODAL FOR TICKET SALES!!!!!!-->
+  <!--OLD MODAL FOR TICKET SALES!!!!!!-->
 
-    <!-- Modal -->
+  <!-- Modal -->
 
-    <!-- <div class="modal fade" id="myModal" role="dialog">
+  <!-- <div class="modal fade" id="myModal" role="dialog">
 
     <div class="modal-dialog">
 
@@ -239,7 +252,7 @@
       <div id="paypal-button-container"></div>
 <script src="https://www.paypal.com/sdk/js?client-id=AWPlxDwd_GJ5I-8HkaAkqVywUv6oRicKNP0NTWFijL0QbmskT4mupAx7pAz6vPFNOdn31JuTI0QzhArj&currency=USD" data-sdk-integration-source="button-factory"></script> -->
 
-    <!-- <script>
+  <!-- <script>
     paypal.Buttons({
         style: {
             shape: 'rect',
@@ -267,7 +280,7 @@
     }).render('#paypal-button-container');
 
 </script> -->
-    <!-- </div>
+  <!-- </div>
     </div>
   </div>
 </div> -->
@@ -283,17 +296,17 @@
 
 
 
-    <!-- Container for Media -->
-    <!-- <br><br>
+  <!-- Container for Media -->
+  <!-- <br><br>
     <div id="media"> -->
-    <!-- <div class = "container"> -->
-    <!-- <h3 class="text-center">MEDIA</h3>
+  <!-- <div class = "container"> -->
+  <!-- <h3 class="text-center">MEDIA</h3>
       <div class='conatiner'>
         <div class="row text-center">
         <div class="col-md-12 col-xs-12">
       <div id="myCarouseltwo" class="carousel slide" data-ride="carousel"> -->
-    <!-- Indicators -->
-    <!-- <ol class="carousel-indicators">
+  <!-- Indicators -->
+  <!-- <ol class="carousel-indicators">
           <li data-target="#myCarouseltwo" data-slide-to="0" class="active"></li>
           <li data-target="#myCarouseltwo" data-slide-to="1"></li>
           <li data-target="#myCarouseltwo" data-slide-to="2"></li>
@@ -301,19 +314,19 @@
 
 
 
-    <!-- Wrapper for slides -->
-    <!-- <div class="carousel-inner" role="listbox">
+  <!-- Wrapper for slides -->
+  <!-- <div class="carousel-inner" role="listbox">
           <div class="item active">
             <iframe width="1000" height="600" src="https://www.youtube.com/embed/fl79j2Izbm4" frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="carousel-caption"> -->
-    <!-- <h3>New York</h3>
+  <!-- <h3>New York</h3>
                   <p>The atmosphere in New York is lorem ipsum.</p> -->
-    <!-- </div>
+  <!-- </div>
           </div> -->
 
 
-    <!-- 
+  <!-- 
           <div class="item">
             <iframe width="1000" height="600" src="https://www.youtube.com/embed/FwUE-WDi93Y" frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -329,8 +342,8 @@
         </div>
  -->
 
-    <!-- Left and right controls -->
-    <!-- <a class="left carousel-control" href="#myCarouseltwo" role="button" data-slide="prev">
+  <!-- Left and right controls -->
+  <!-- <a class="left carousel-control" href="#myCarouseltwo" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
@@ -340,12 +353,12 @@
           <span class="sr-only">Next</span>
         </a>
       </div> -->
-    <!-- </div> -->
-    <!-- </div>
+  <!-- </div> -->
+  <!-- </div>
       </div>
     </div> -->
 
-    <!-- 
+  <!-- 
       <div class="container">
         <h3 class="text-center"> SPOTIFY SONGS</h3>
         <div class="row spotify-container text-center">
@@ -363,13 +376,13 @@
 
 
 
-    <br>
-
-   
+  <br>
 
 
 
-    <!-- <div class="col-sm-4">
+
+
+  <!-- <div class="col-sm-4">
         <p class="text-center"><strong>Hand Made Pins</strong></p><br>
         <a href="#demo" data-toggle="collapse">
         </a>
@@ -393,37 +406,35 @@
 
 
 
-    <!-- Container (Contact Section) -->
-    <div id="contact" class="bg-1">
-      <div class="container">
-        <h3 class="text-center">CONTACT</h3>
-        <!-- <p class="text-center"><em>We love our fans!</em></p> -->
+  <!-- Container (Contact Section) -->
+  <div id="contact" class="bg-1">
+    <div class="container">
+      <h3 class="text-center">CONTACT</h3>
+      <!-- <p class="text-center"><em>We love our fans!</em></p> -->
 
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <!-- <p>Fan? Drop a note.</p> -->
-            <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
-            <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
-            <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
-          </div>
-        </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <!-- <p>Fan? Drop a note.</p> -->
+          <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
+          <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
+          <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
         </div>
       </div>
+    </div>
+  </div>
 
 
 
-      <!-- Image of location/map
+  <!-- Image of location/map
 <img src="map.jpg" class="img-responsive" style="width:100%"> -->
 
-      <!-- Footer -->
+  <!-- Footer -->
 
-      <footer class="text-center">
-        <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-          <span class="glyphicon glyphicon-chevron-up"></span>
-        </a><br><br>
-      </footer>
-    
-
+  <footer class="text-center">
+    <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+      <span class="glyphicon glyphicon-chevron-up"></span>
+    </a><br><br>
+  </footer>
 
 
 
@@ -431,40 +442,42 @@
 
 
 
-    <script>
-      $(document).ready(function () {
-        // Initialize Tooltip
-        $('[data-toggle="tooltip"]').tooltip();
 
-        // Add smooth scrolling to all links in navbar + footer link
-        $(".navbar a, footer a[href='#myPage']").on('click', function (event) {
 
-          // Make sure this.hash has a value before overriding default behavior
-          if (this.hash !== "") {
+  <script>
+    $(document).ready(function () {
+      // Initialize Tooltip
+      $('[data-toggle="tooltip"]').tooltip();
 
-            // Prevent default anchor click behavior
-            event.preventDefault();
+      // Add smooth scrolling to all links in navbar + footer link
+      $(".navbar a, footer a[href='#myPage']").on('click', function (event) {
 
-            // Store hash
+        // Make sure this.hash has a value before overriding default behavior
+        if (this.hash !== "") {
 
-            var hash = this.hash;
+          // Prevent default anchor click behavior
+          event.preventDefault();
 
-            // Using jQuery's animate() method to add smooth page scroll
+          // Store hash
 
-            // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+          var hash = this.hash;
 
-            $('html, body').animate({
-              scrollTop: $(hash).offset().top
-            }, 900, function () {
-              // Add hash (#) to URL when done scrolling (default click behavior)
-              window.location.hash = hash;
+          // Using jQuery's animate() method to add smooth page scroll
 
-            });
-          } // End if
-        });
-      })
-    </script>
-  
+          // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+
+          $('html, body').animate({
+            scrollTop: $(hash).offset().top
+          }, 900, function () {
+            // Add hash (#) to URL when done scrolling (default click behavior)
+            window.location.hash = hash;
+
+          });
+        } // End if
+      });
+    })
+  </script>
+
 
 
 </body>
