--- a/merch.html
+++ b/merch.html
@@ -18,32 +18,33 @@
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div class="nav navbar-nav navbar-center bg-1">
-            <h6 style="padding-left:20px;">Maddie in Good Company</h6>
-          </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="./index.html">HOME</a></li>
-              <li><a href="./about.html">ABOUT</a></li>
-              <li><a target="_blank" href="https://open.spotify.com/artist/6kLV2oqFWrSvlFWlsw97QH?si=Xen0klhnSpe5IGWMUiGswQ">MUSIC</a></li>
-              <li><a target="_blank" href="https://www.youtube.com/channel/UC4iFrS6hKpvFr3QVqszlwRQ">VIDEOS</a></li>
-              <li><a href="./shows.html">SHOWS</a></li>
-              <li><a href="./photos.html">PHOTOS</a></li>
-              <li><a href="./merch.html">MERCH</a></li>
-              <li><a href="./contact.html">CONTACT</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <div class="nav navbar-nav navbar-center bg-1">
+        <h6 style="padding-left:20px;">Maddie in Good Company</h6>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="./index.html">HOME</a></li>
+          <li><a href="./about.html">ABOUT</a></li>
+          <li><a target="_blank"
+              href="https://open.spotify.com/artist/6kLV2oqFWrSvlFWlsw97QH?si=Xen0klhnSpe5IGWMUiGswQ">MUSIC</a></li>
+          <li><a target="_blank" href="https://www.youtube.com/channel/UC4iFrS6hKpvFr3QVqszlwRQ">VIDEOS</a></li>
+          <li><a href="./shows.html">SHOWS</a></li>
+          <li><a href="./photos.html">PHOTOS</a></li>
+          <li><a href="./merch.html">MERCH</a></li>
+          <li><a href="./contact.html">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
 
@@ -52,10 +53,13 @@
 
 
 
-<!-- Container (The Store Section) -->
-<div id="store" class="container text-center">
-    <h3>STORE</h3>
-    <p>Maddie In Good Company Merchandise</p>
+  <!-- Container (The Store Section) -->
+  <div id="store" class="container">
+    <div class="text-center">
+      <h3>STORE</h3>
+    </div>
+    <!-- <p>Maddie In Good Company Merchandise</p> -->
+    <h2>Coming soon...</h2>
     <br>
     <!-- <div class="row">
     <div class="col-sm-4 col-sm-offset-2 col-12 text-center">
@@ -99,23 +103,24 @@
         </form>
         
     </div> -->
-    
+
     <!-- </div> -->
     <div id="contact" class="bg-1">
-        <div class="container">
-          <h3 class="text-center">CONTACT</h3>
-          <!-- <p class="text-center"><em>We love our fans!</em></p> -->
-  
-          <div class="row">
-            <div class="col-md-12 text-center">
-              <!-- <p>Fan? Drop a note.</p> -->
-              <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
-              <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
-              <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
-            </div>
-          </div>
+      <div>
+        <h3 class="text-center">CONTACT</h3>
+        <!-- <p class="text-center"><em>We love our fans!</em></p> -->
+
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <!-- <p>Fan? Drop a note.</p> -->
+            <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
+            <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
+            <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
           </div>
         </div>
+
+      </div>
+    </div>
   </div>
 
 
@@ -148,13 +153,13 @@
 
 
 
-    <!-- Footer -->
+  <!-- Footer -->
 
-    <footer class="text-center">
-      <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-        <span class="glyphicon glyphicon-chevron-up"></span>
-      </a><br><br>
-    </footer>
+  <footer class="text-center">
+    <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+      <span class="glyphicon glyphicon-chevron-up"></span>
+    </a><br><br>
+  </footer>
   </div>
 
 
@@ -203,4 +208,3 @@
 </body>
 
 </html>
-
