--- a/shows.html
+++ b/shows.html
@@ -18,32 +18,33 @@
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div class="nav navbar-nav navbar-center bg-1">
-            <h6 style="padding-left:20px;">Maddie in Good Company</h6>
-          </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="./index.html">HOME</a></li>
-              <li><a href="./about.html">ABOUT</a></li>
-              <li><a target="_blank" href="https://open.spotify.com/artist/6kLV2oqFWrSvlFWlsw97QH?si=Xen0klhnSpe5IGWMUiGswQ">MUSIC</a></li>
-              <li><a target="_blank" href="https://www.youtube.com/channel/UC4iFrS6hKpvFr3QVqszlwRQ">VIDEOS</a></li>
-              <li><a href="./shows.html">SHOWS</a></li>
-              <li><a href="./photos.html">PHOTOS</a></li>
-              <li><a href="./merch.html">MERCH</a></li>
-              <li><a href="./contact.html">CONTACT</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <div class="nav navbar-nav navbar-center bg-1">
+        <h6 style="padding-left:20px;">Maddie in Good Company</h6>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="./index.html">HOME</a></li>
+          <li><a href="./about.html">ABOUT</a></li>
+          <li><a target="_blank"
+              href="https://open.spotify.com/artist/6kLV2oqFWrSvlFWlsw97QH?si=Xen0klhnSpe5IGWMUiGswQ">MUSIC</a></li>
+          <li><a target="_blank" href="https://www.youtube.com/channel/UC4iFrS6hKpvFr3QVqszlwRQ">VIDEOS</a></li>
+          <li><a href="./shows.html">SHOWS</a></li>
+          <li><a href="./photos.html">PHOTOS</a></li>
+          <li><a href="./merch.html">MERCH</a></li>
+          <li><a href="./contact.html">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
 
@@ -53,73 +54,61 @@
 
 
   <!-- Container (The ABOUT Section) -->
-  <div id="about" class="container">
-      <div class="text-center">    
-          <h3>SHOWS</h3>
+  <div id="tour" class="bg-1">
+    <div class="container">
+      <h3 class="text-center">UPCOMING SHOWS</h3>
+      <ul class="list-group">
+        <li class="list-group-item black-text">
+          <div>May 21 @ Dee's Lounge</div>
+          <a target="_blank" href="https://deeslounge.com/shows-events/"><button
+              class="btn btn-primary">Tickets</button></a>
+        </li>
+        <li class="list-group-item black-text">
+          <div>May 28 @City Winery </div><a target="_blank" href="https://deeslounge.com/shows-events/"><button
+              class="btn btn-primary">Tickets</button></a>
+        </li>
+
+      </ul>
+
+
+
+
+
+
+      <!-- <h3 class="text-center">PAST SHOWS</h3>
+      <div class="row text-center">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="assets/images/5spot.jpeg" alt="5 spot" width="400" height="300">
+            <p><strong>@ The 5 Spot</strong></p>
+            <p>January 5 2020</p>
+            <p>w/ Camden West & Carter Veil</p> -->
+      <!-- <p>9:00pm</p>
+          <p>$10</p> -->
+      <!-- <button class="btn" data-toggle="modal" data-target="#myModal">View Setlist</button> -->
+      <!-- <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button> -->
+      <!-- </div>
+        </div>
+      </div> -->
     </div>
+  </div>
+
+  <div id="contact" class="bg-1">
+    <div class="container">
+      <h3 class="text-center">CONTACT</h3>
+      <!-- <p class="text-center"><em>We love our fans!</em></p> -->
 
       <div class="row">
-          <div class="col-sm-6">
-              <img width="100%" height="100%" src="./assets/updated-images/BlakePhotoshoot.JPEG">
-          </div>
-          <div class="col-sm-6">
-            <p>Maddie in Good Company was established in January 2018 at a Janis Joplin tribute show in nashville, tn at Exit In. The 3 piece clicked immediately, headed back to the house, ate pizza and jammed. High on life, the band was formed. The following weekend the band met and started writing songs. Over the last 4 years they have released 4 songs and are in the process of recording an album. The band has since expanded to be 8 members consisting of vocals, bgv, guitar, bass, drums, 2 saxophone players, and a keyboardist. The melting pot of musical background has created a new genre called “soul n roll”.  </p>
-            <p>The band’s mission is to encourage everyone to surround themselves in good company. They were lucky enough to find each other on a serendipitous night and have since become family. They want to share that feeling with others; If you don’t have it, you can get it with us. </p>
-          </div>
-      </div>
-
-
-    <!-- <br>
-    <div class="row">
-      <div class="col-sm-4">
-        <p class="text-center"><strong>Maddie</strong></p><br>
-        <a href="#demo2" data-toggle="collapse">
-          <img src="assets/images/maddie.jpg" class="img-circle person" alt="Maddie" width="255" height="255">
-        </a>
-        <div id="demo2" class="collapse">
-          <p>Singer</p>
-          <p>Favorite Food: Chicky Chicky Parm Parm</p>
+        <div class="col-md-12 text-center">
+          <!-- <p>Fan? Drop a note.</p> -->
+          <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
+          <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
+          <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
         </div>
       </div>
-      <div class="col-sm-4">
-        <p class="text-center"><strong>Chris</strong></p><br>
-        <a href="#demo" data-toggle="collapse">
-          <img src="assets/images/chris.jpg" class="img-circle person" alt="Chris" width="255" height="255">
-        </a>
-        <div id="demo" class="collapse">
-          <p>Guitarist</p>
-          <p>Favorite Food: Ceviche</p>
-        </div>
-      </div>
-
-
-      <div class="col-sm-4">
-        <p class="text-center"><strong>Griffin</strong></p><br>
-        <a href="#demo3" data-toggle="collapse">
-          <img src="assets/images/griffin.jpg" class="img-circle person" alt="Griffin" width="255" height="255">
-        </a>
-        <div id="demo3" class="collapse">
-          <p>Drummer</p>
-          <p>Favorite Food: (Baltimore) Crabcakes</p>
-        </div>
-      </div>
-    </div> -->
-
-    <div id="contact" class="bg-1">
-      <div class="container">
-        <h3 class="text-center">CONTACT</h3>
-        <!-- <p class="text-center"><em>We love our fans!</em></p> -->
-
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <!-- <p>Fan? Drop a note.</p> -->
-            <p><span class="glyphicon glyphicon-map-marker"></span>Nashville TN</p>
-            <p><span class="glyphicon glyphicon-phone"></span>Phone: +1 (702) 845-9282</p>
-            <p><span class="glyphicon glyphicon-envelope"></span>Email: MaddieInGoodCompany@gmail.com</p>
-          </div>
-        </div>
-        </div>
-      </div>
+    </div>
+  </div>
   </div>
 
 
@@ -152,13 +141,13 @@
 
 
 
-    <!-- Footer -->
+  <!-- Footer -->
 
-    <footer class="text-center">
-      <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
-        <span class="glyphicon glyphicon-chevron-up"></span>
-      </a><br><br>
-    </footer>
+  <footer class="text-center">
+    <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+      <span class="glyphicon glyphicon-chevron-up"></span>
+    </a><br><br>
+  </footer>
   </div>
 
 
