working on contact

--- a/about.html
+++ b/about.html
@@ -58,14 +58,14 @@
   <div id="about" class="container">
     <div class="text-center">
       <h3>THE BAND</h3>
-      <p><em>Soul n Roll</em></p>
+      <p><em>"Soul n Roll"</em></p>
     </div>
 
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-6" style="padding-top:20px;">
         <img width="100%" height="100%" src="./assets/updated-images/BlakePhotoshoot.JPEG">
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6" style="padding-top:20px;">
         <p>Maddie in Good Company was established in January 2018 at a Janis Joplin tribute show in nashville, tn at
           Exit In. The 3 piece clicked immediately, headed back to the house, ate pizza and jammed. High on life, the
           band was formed. The following weekend the band met and started writing songs. Over the last 4 years they have
