--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+    type='text/css'>
+  <link href="./styles.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <link href="./styles.css" rel="stylesheet" type="text/css">
+  <script src="https://kit.fontawesome.com/310cf36ef2.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -55,11 +58,50 @@
 
   <!-- Container (The ABOUT Section) -->
   <div id="about" class="container">
-    <div class="text-center">
-      <h3>CONTACT</h3>
+    <div class="row">
+      <div class="text-center">
+        <h3>CONTACT</h3>
+      </div>
+
+      <div>
+
+
+
+        <form accept-charset="UTF-8" action="https://getform.io/f/600c76a6-068c-4799-8912-1ec007058f20" method="POST"
+          enctype="multipart/form-data" target="_blank" id="wpform">
+          <div class="form-row">
+            <div class="form-group col-sm-4 col-sm-offset-2">
+              <label class="required">Full name</label>
+              <input class="form-control form-control-lg" type="text" name="first_name" placeholder="Enter your name"
+                required="required">
+            </div>
+            <div class="form-group col-sm-4">
+              <label class="required">Email address</label>
+              <input class="form-control form-control-lg" type="email" name="email"
+                placeholder="Enter your email address" required="required">
+            </div>
+            <br>
+          </div>
+          <br>
+
+          <div class="form-group col-sm-8 col-sm-offset-2">
+            <label class="required">Your message</label>
+            <div>
+              <textarea class="form-control form-control-lg message-contact" type="text" name="message"
+                placeholder="Enter your message" required="required"></textarea>
+            </div>
+
+            <br>
+            <input type="hidden" name="utf8" value="✓">
+            <button class="btn btn-primary" type="submit">SUBMIT</button>
+          </div>
+        </form>
+      </div>
     </div>
 
-    <h2>Coming soon...</h2>
+
+
+
 
     <!-- <br>
     <div class="row">
